# xgl

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
include/: shader.hpp
src/: main.cpp  shader.cpp
xgl/: main.cpp
